Added title and signature pages

--- a/Thesis/USCthesis2004.sty
+++ b/Thesis/USCthesis2004.sty
@@ -72,7 +72,7 @@
 %% Title page
 
 \newcommand{\titleinfo}{%
-A Dissertation Presented to the\\
+A Th Presented to the\\
 FACULTY OF THE GRADUATE SCHOOL\\
 UNIVERSITY OF SOUTHERN CALIFORNIA\\
 In Partial Fulfillment of the\\
